# Gradex-research-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  seed_dashboard.py
.evo/: state.db
.evo/traces/: 12366e76-4c4f-4acf-8b3f-191008979da5.jsonl  21a29126-82a1-4d73-afbc-f3e3a09acd7b.jsonl  2bb4e240-8808-467f-a71a-58df88e0e64d.jsonl  694b7d35-4b1e-4af2-8ba3-13ca57229cf2.jsonl  b378a2bf-f760-484b-ba45-73fa497ae6bf.jsonl  c84c3496-5c03-4837-a676-eabe5702edb0.jsonl  d6856171-f713-4424-af6b-7eaf749aee83.jsonl
.github/workflows/: ci.yml  publish.yml
_seed_demo/: state.db
_seed_demo/traces/: 16f332f9-6cb5-4988-8b4e-5561f0d0f405.jsonl  249fe8c6-39d3-41a5-b97b-a2e4ca1f5aed.jsonl  2a5b0073-0036-4ca8-80e3-2433dc72b5c5.jsonl  309ffc37-e9dc-40b3-876c-d508f1190e16.jsonl  3931b258-6e5f-4e9a-af0e-fd64e0787475.jsonl  69c4f0c0-572b-451e-a6c6-bba70263eefa.jsonl  77ba77e8-10c5-4128-a239-9123408b3131.jsonl  9aac1f80-efa1-42a8-bad7-f15be2455638.jsonl  a3bb20bb-e5ae-4fcf-8846-50e3e6166515.jsonl  add76fe1-814d-4bbb-b5a9-ac07d5076c8e.jsonl  d7ddb230-5e36-42b0-b261-f6dc102aa8db.jsonl  e4dcd895-dfba-4c1a-8b4d-74e7a95ea49e.jsonl  e620d384-aef9-4312-b5cb-4dda6a985076.jsonl  e751a1ad-2eae-40d8-b922-d2378551891f.jsonl
scripts/: first-run.ps1  generate_marketing_pdf.py  publish-pypi.ps1  screenshot-demo.ps1
skills/claude-code/discover/: SKILL.md
skills/claude-code/optimize/: SKILL.md
skills/cursor/: discover.mdc  optimize.mdc
src/gradex/: __init__.py  analytics.py  cli.py  config.py  doctor.py  export.py  orchestrator.py  repository.py  setup_wizard.py  state.py  subagent.py  traces.py
src/gradex/ai/: __init__.py  brief.py  client.py  discover.py  language.py
src/gradex/ai/prompts/: benchmark_design.md  benchmark_design_node.md  gate_design.md  gate_design_node.md  optimize_brief.md  repo_analysis.md
src/gradex/backends/: __init__.py  base.py  pool.py  worktree.py
src/gradex/dashboard/: __init__.py  broadcaster.py  server.py
src/gradex/dashboard/templates/: index.html
src/gradex/hosts/: __init__.py  base.py  claude_code.py  cursor.py
src/gradex/runner/: __init__.py  benchmark.py  cache.py  gate.py
src/gradex/security/: scrubber.py
tests/: conftest.py  test_ai_client.py  test_analytics.py  test_benchmark.py  test_brief.py  test_cache.py  test_cli.py  test_concurrent.py  test_config.py  test_dashboard.py  test_discover.py  test_doctor.py  test_export.py  test_gate.py  test_groq_provider.py  test_hosts.py  test_language.py  test_openrouter_provider.py  test_orchestrator.py  test_pool.py  test_runner_integration.py  test_scrubber.py  test_setup_wizard.py  test_shutdown.py  test_state.py  test_subagent.py  test_traces.py  test_worktree.py
website/: blog.html  docs.html  future.html  index.html  nav.js  package-lock.json  package.json  pricing.html  robots.txt  sitemap.xml  styles.css  vercel.json  waitlist.js
website/api/: waitlist.js
website/scripts/: validate.js
