[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradex"
version = "0.1.0"
description = "Measurable code improvement — autonomous optimization loop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cli", "coding", "plugin", "ai"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.18",
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.0.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
]

[project.scripts]
gradex = "gradex.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gradex"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gradex"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/"]

[[tool.mypy.overrides]]
# SQLModel + SQLAlchemy type stubs have known gaps that produce false positives
# under strict mode (generic column expressions, dynamic ORM attribute types, etc.).
module = ["gradex.state", "gradex.repository"]
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
# FastAPI/Starlette route return types and Jinja2 templating are dynamically typed.
module = ["gradex.dashboard.server", "gradex.dashboard.broadcaster"]
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["sqlmodel.*", "sqlalchemy.*", "aiosqlite.*", "uvicorn.*", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tomllib dynamic dict and dataclasses.fields(...) produce Any under strict.
module = ["gradex.config"]
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
# anthropic/openai SDK attribute chains + httpx resp.json() produce Any.
module = ["gradex.ai.client", "gradex.ai.discover", "gradex.ai.brief"]
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# asyncio.gather return type with return_exceptions=True and SQLModel session
# usage in subagent/orchestrator produce Any under strict.
module = ["gradex.subagent", "gradex.orchestrator"]
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
# Host installers use shutil.which (returns str | None), Path.stat(),
# and json.loads (returns Any) — all produce Any under strict.
module = ["gradex.hosts.*", "gradex.hosts"]
warn_return_any = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.1.0",
]
